--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "Template for interacting with cubing JS libraries.",
   "author": "Lucas Garron <code@garron.net> (https://garron.net/)",
-  "license": "(MIT OR GPL-3.0-or-later)",
+  "license": "GPL-3.0-or-later",
   "repository": "github:cubing/match-the-scramble.js",
   "bugs": {
     "url": "https://github.com/cubing/match-the-scramble.js/issues"
